prevent images from overflowing on occasions page on mobile

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -115,3 +115,9 @@ button {
 .list-text {
   font-size: var(--font-title-small) !important;
 }
+
+@media only screen and (max-width: 800px) {
+  .list-text img {
+    max-width: 100%;
+  }
+}
